put the show name on the top of the menu, fixed some alignment

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,3 @@
-
 .fill-remaining-space {
   flex: 1 1 auto;
 }
@@ -14,9 +13,9 @@ footer {
   bottom: 0;
   width: 100%;
   height: 4rem;
+  overflow: hidden;
 }
 
 .mat-toolbar.mat-primary{
-  background-color:#232f3e
+  background-color:#000;
 }
-
